toolbar z-index fixing

--- a/public/themes/sitebuilder/assets/css/interface.css
+++ b/public/themes/sitebuilder/assets/css/interface.css
@@ -719,7 +719,6 @@ fieldset[disabled] .btn-grey.active {
     width: 100%;
     height: 100%;
     top: 0;
-    z-index: -1;
     float:left;
     border: none;
 }
